# ai_concept_impl

./: .gitignore  main.py  message.py  prompt.py  pyproject.toml  requirements.txt  rgcPrompt.py
data/textfiles/: sample.txt
notebooks/: chain.ipynb  embedding.ipynb  json_output.ipynb  loader.ipynb  memory.ipynb  message_placeholder.ipynb  parallel.ipynb  runnables.ipynb  strparser.ipynb  structured_output.ipynb  text-splitter.ipynb
notebooks/chroma_db/: chroma.sqlite3
notebooks/faiss_index/: index.faiss  index.pkl
